--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<body>
 		<font size = "7" color = "red">Hello Git!!</font>
+		<font size = "7" color = "blue">Hello Git!!</font>
 	</body>
 </html>
